bencher/tmp/regexdna/tmp/_err
  File "regexdna.python", line 35
    print ilen
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(ilen)?
